# hack-and-slash

./: .gitattributes  .gitignore  .gitmodules  README.md  interesting_seeds.txt
.github/actions/install-linux-deps/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: build_and_test.yml  clippy_matrix.yml  fmt.yml  pages.yml  pr.yml  push.yml  rust.yml
rs/: .gitignore  Cargo.toml  index.html  rustfmt.toml
rs/.cargo/: config.toml
rs/asset_src/: player.model
rs/assets/: globals.scn.ron
rs/assets/pickups/: pickup_material.mat.ron
rs/assets/shaders/: bubble.wgsl  dist_dither.wgsl  dither_fade.wgsl  skybox.wgsl  terrain.mat.ron  util.wgsl
rs/assets/ships/: player.glb
rs/assets/tune/: player_params.ron
rs/assets/ui/: icon_map.ron
rs/engine/: Cargo.toml
rs/engine-dylib/: Cargo.toml
rs/engine-dylib/src/: lib.rs
rs/engine/macros/src/: lib.rs
rs/engine/src/: anim.rs  draw.rs  input.rs  lib.rs  mats.rs  nav.rs  offloading.rs  planet.rs  settings.rs  testing.rs  ui.rs  util.rs
rs/engine/src/input/: map.rs
rs/engine/src/input/map/: detect.rs  icons.rs  widgets.rs
rs/engine/src/mats/: fade.rs  fog.rs
rs/engine/src/nav/: heightmap.rs
rs/engine/src/offloading/: desktop.rs  wasm.rs
rs/engine/src/planet/: chunks.rs  day_night.rs  frame.rs  seeds.rs  sky.rs  terrain.rs  weather.rs
rs/engine/src/planet/terrain/: noise.rs  physics.rs  seeds.rs
rs/engine/src/ui/: a11y.rs  dbg.rs  elem.rs  focus.rs  hud.rs  in_map.rs  interact.rs  layout.rs  mouse.rs  text.rs  widgets.rs
rs/engine/src/ui/in_map/: detect.rs  icons.rs
rs/engine/src/ui/widgets/: borders.rs
rs/engine/tests/: visual.rs
rs/game-dylib/: Cargo.toml
rs/game-dylib/src/: lib.rs
rs/rng/: Cargo.toml
rs/rng/src/: lib.rs  terrain.rs
rs/src/: abilities.rs  anim.rs  enemies.rs  input.rs  lib.rs  main.rs  mats.rs  nav.rs  offloading.rs  pickups.rs  planet.rs  player.rs  settings.rs  terrain.rs  tests.rs  ui.rs  util.rs
rs/src/enemies/: aa.rs  copter.rs  dummy.rs  mine.rs
rs/src/mats/: fog.rs
rs/src/nav/: alg.rs  heightmap.rs
rs/src/offloading/: desktop.rs  wasm.rs
rs/src/planet/: chunks.rs  day_night.rs  frame.rs  sky.rs  terrain.rs  weather.rs
rs/src/planet/terrain/: noise.rs
rs/src/player/: abilities.rs  camera.rs  ctrl.rs  input.rs  prefs.rs  tune.rs
rs/src/ui/: dbg.rs  dbg_ui.rs  game_ui.rs  hud.rs  pause_menu.rs  prefs_menu.rs  settings_menu.rs
rs/src/ui/settings_menu/: ctrls_menu.rs
rs/tests/: headless-tests.rs  headless.rs  integration.rs  visual.rs
rs/tools/editor/: Cargo.toml
rs/tools/editor/src/: main.rs
rs/tools/macros/: Cargo.toml
rs/tools/macros/src/: lib.rs
