[package]
name = "sond-has-engine"
version = "0.1.0"
edition = "2021"
description = "Things that will rarely change during development."

[features]
debugging = ["bevy-inspector-egui", "egui_plot"]
vis_test = ["testing", "render"]
testing = ["colored", "linkme"]
render = ["bevy/bevy_render", "bevy/bevy_winit", "bevy_rapier3d/debug-render", "bevy_rapier3d/async-collider", "bevy-inspector-egui/bevy_render"]

[dependencies]
# Mine
particles = { workspace = true }
macros = { workspace = true }

# Engine
accesskit = { workspace = true }
bevy = { workspace = true, features = ["bevy_ui"] }
bevy_rapier3d = { workspace = true }
rapier3d = { workspace = true }
bevy_mod_speedup = "0.6.0"

# Util
atomicow = { workspace = true }
ab_glyph = { workspace = true }
array-init = { workspace = true }
base64 = { workspace = true }
bevy_pkv = { workspace = true }
bevy_svg = { workspace = true }
bimap = { workspace = true }
blake3 = { workspace = true }
bytemuck = { workspace = true }
futures-lite = { workspace = true }
itertools = { workspace = true }
leafwing-input-manager = { workspace = true }
lyon_tessellation = { workspace = true }
noise = { workspace = true }
num-traits = { workspace = true }
ordered-float = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
smol_str = { workspace = true }
tiny_bail = { workspace = true }
web-time = { workspace = true }

# Debugging
bevy-inspector-egui = { workspace = true, optional = true }
egui_plot = { workspace = true, optional = true }

# Testing
colored = { version = "2", optional = true }
linkme = { workspace = true, optional = true }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
bevy_dylib = { workspace = true }

[target.'cfg(target_arch="wasm32")'.dependencies]
web-sys = "0.3"

[lints.clippy]
needless_update = "allow" # `..default()` used a lot to allow quick adding/removing of fields
too_many_arguments = "allow" # Systems often need lots of arguments
type_complexity = "allow" # Queries seem complex to Clippy but are usually easily read

[[test]]
name = "visual"
required-features = ["vis_test"]
harness = false
