[package]
name = "sond-has-engine"
version = "0.1.0"
edition = "2021"
description = "Things that will rarely change during development."

[features]
# TODO: This might be able to be replaced by debug_assertions now that the feature "dev_ui" exists
debugging = []
# TODO: Should dev_ui actually force debugging?
dev_ui = ["debugging", "render", "bevy-inspector-egui", "egui_plot", "leafwing-input-manager/egui"]
vis_test = ["testing", "render", "linkme", "dev_ui"]
testing = ["colored", "bevy_mesh"]
render = [
    "bevy/bevy_render",
    "bevy/bevy_window",
    "bevy/bevy_winit",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_sprite",
    "bevy/bevy_picking",
    "bevy_rapier3d/debug-render",
    "bevy_rapier3d/async-collider",
    "bevy-inspector-egui?/bevy_render",
]

[dependencies]
# Mine
macros = { workspace = true }
particles = { workspace = true }
rng = { package = "sond-has-rng", path = "../rng" }

# Engine
accesskit = { workspace = true }
bevy = { workspace = true, features = ["bevy_ui"] }
bevy_rapier3d = { workspace = true }
rapier3d = { workspace = true }

# Util
atomicow = { workspace = true }
ab_glyph = { workspace = true }
array-init = { workspace = true }
bevy_pkv = { workspace = true }
bevy_svg = { workspace = true }
bimap = { workspace = true }
bytemuck = { workspace = true }
dyn-clone = { workspace = true }
futures-lite = { workspace = true }
itertools = { workspace = true }
leafwing-input-manager = { workspace = true }
lyon_tessellation = { workspace = true }
noise = { workspace = true }
num-traits = { workspace = true }
ordered-float = { workspace = true }
rand = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
smol_str = { workspace = true }
tiny_bail = { workspace = true }
web-time = { workspace = true }

# Debugging
bevy-inspector-egui = { workspace = true, optional = true }
egui_plot = { workspace = true, optional = true }

# Testing
bevy_mesh = { workspace = true, optional = true }
colored = { version = "2", optional = true }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
bevy_dylib = { workspace = true, optional = true }
linkme = { workspace = true, optional = true }

[target.'cfg(target_arch="wasm32")'.dependencies]
web-sys = "0.3"

[lints.clippy]
needless_update = "allow" # `..default()` used a lot to allow quick adding/removing of fields
too_many_arguments = "allow" # Systems often need lots of arguments
type_complexity = "allow" # Queries seem complex to Clippy but are usually easily read

[[test]]
name = "visual"
required-features = ["vis_test"]
harness = false
