[package]
name = "sond-has-dylib"
version = "0.1.0"
edition = "2021"
description = "Enables dynamic linking of the game, mostly for use in tools."

[lib]
crate-type = ["dylib"]

[dependencies]
sond-has = { path = "..", features = ["debugging"] }
bevy = { workspace = true, default-features = false }
