[package]
name = "sond-has-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = { package = "sond-has-dylib", path = "../../game-dylib" }

bevy = { workspace = true, features = [
    "bevy_ui",
    "default_font",
    "file_watcher",
    "asset_processor",
    "bevy_dynamic_plugin",
] }

crossbeam = { workspace = true }

async-process = "2.0.1"
futures-lite = "2.1.0"
